import 'package:get/get.dart';

/// Controlador da tela de login.
class LoginController extends GetxController {}
