/// Constantes de textos usados no contexto de autenticação.
abstract final class AuthTexts {
  // -- Login Screen -------------------------------------------------------- //
  static const String loginPageTitle = 'Bem-vindo ao Gosnack!';
  static const String loginPageSubtitle =
      'Entre com uma conta de estudante ou professor para fazer pedidos, acompanhar o cardápio e aproveitar suas vantagens na lanchonete.';

  // -- Signup Screen ------------------------------------------------------- //
  static const String signupPageTitle = 'Crie sua conta no Gosnack';
  static const String signupPageSubtitle =
      'Crie sua conta de estudante ou professor para fazer pedidos, acompanhar o cardápio e aproveitar todas as vantagens da lanchonete.';

  // -- Fields -------------------------------------------------------------- //
  static const String email = 'E-mail acadêmico';
  static const String password = 'Senha';

  static const String firstName = 'Primeiro nome';
  static const String lastName = 'Sobrenome';

  // -- Actions ------------------------------------------------------------- //
  static const String login = 'Entrar';
  static const String createAccount = 'Criar uma conta';
  static const String guestLogin = 'Entrar como convidado';

  static const String forgotPassword = 'Esqueci minha senha';
}
